[package]
name = "iro"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
env_logger = "0.9.1"
hsl = "0.1.1"
log = "0.4.17"
miniserde = "0.1.24"
phf = { version = "0.11.0", features = ["macros"]}
