[package]
name = "iro"
version = "0.2.1"
edition = "2021"
authors = ["Kyohei Uto <im@kyoheiu.dev>"]
description = "a cli to print color information"
readme = "README.md"
repository = ""
license = "MIT"
keywords = ["cli", "color"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.0.0"
env_logger = "0.9.1"
colorconv = "0.1.1"
log = "0.4.17"
